@@ -79,7 +79,7 @@ Supported configuration options:
 Your audioscrobbler username.
 .TP
 .B password = MD5SUM
-The md5sum of your Last.fm password.
+Your Last.fm password, either cleartext or its MD5 sum.
 .TP
 .B log = FILE
 The file to which mpdscribble should output debugging information.
