@@ -4,9 +4,8 @@
 # your last.fm login name
 username =
 
-# the MD5 sum of your last.fm password.
-# You may generate it by running "echo -n the_password |md5sum"
-password = d41d8cd98f00b204e9800998ecf8427e
+# your last.fm password
+password =
 
 # HTTP proxy URL.
 #proxy = http://the.proxy.server:3128
